examples/gitlab_nodejs/015_deploy_app/.helm/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: basicapp
spec:
  rules:
  - host: mydomain.io
    http:
      paths:
      - path: /
        backend:
          serviceName: basicapp
          servicePort: 3000
